--- a/projeto-glass-html5/_textos/index-txt.html
+++ b/projeto-glass-html5/_textos/index-txt.html
@@ -14,7 +14,7 @@
 
 
 
-    <img src="C:\Users\euwes\OneDrive\Área de Trabalho\projeto-glass-html5\_imagens\glass-oculos-preto-peq.png">
+    <img src="">
 
 Menu Principal
 - Home
