--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre google Glass</title>
+    <style>
+        body{
+            background-color:rgba(237, 238, 190, 0.295);
+            color: rgba(0, 0, 0,);
+        }
+        p {
+            text-align: justify;
+            text-indent: 50px;
+        }
+        h2 {
+            text-align: center;
+        }     
+     </style>
+    
 </head>
 <body>
     <div id="interface">
+        <header>
+
         <hgroup>
             <h1>Google Glass</h1>
             <h2>A revolução do Google está chegando</h2>
@@ -14,7 +30,7 @@
 
 
 
-    <img src="glass-oculos-preto-peq.png">
+    <img src="E:\projetos DEV\site--glass\projeto-glass-html5\_imagens\glass-oculos-preto-med.png">
 
 Menu Principal
 - Home
@@ -22,21 +38,24 @@ Menu Principal
 - Fotos
 - Multimídia
 - Fale conosco
+        </header>
+        <hgroup>
+    
+            <h3 >Tecnologia> Inovações</h3>
+            <h1> tudo sobre o Google Glass</h1>
+            <h2>Gustavo Guanabara</h2>
+            <h3 >em 23/Abril/2013,</h3>
+        </hgroup>
 
-Tecnologia > Inovações
-Saiba tudo sobre o Google Glass
-por Gustavo Guanabara
-Atualizado em 23/Abril/2013
-
-O que é
-O Google Glass é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.
+<h2 > que é</h2>
+<p> O<b> Google Glass </b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass </em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
 [AQUI ENTRA UMA FOTO]
 
-Data de lançamento
-Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.
+<h2> Data de lançamento</h2>
+<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-Especificações Técnicas
+<h2>Especificações Técnicas</h2>
 Tabela Técnica do Google Glass Mar/2013
 
 Tela:Resolução equivalente a tela de 25"
@@ -44,25 +63,26 @@ Camera: 5MP para fotos / 720p para vídeos
 Conectividade: Wi-Fi/ Bluetooth
 Memória Interna: 12GB
 
-Como funciona
-De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça
+<h2>Como funciona</h2>
+<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
 
-O que você pode fazer com o Google Glasses
-O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.
-
-[AQUI ENTRA UM VÍDEO]
-
-Outras Notícias
-Vídeo mais recente
+<h2> O que você pode fazer com o Google Glasses</h2>
+<p> vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
 
-Novidades no Glass
-O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.
+<h1>Outras Notícias</h1>
+<h3>Vídeo mais recente</h3>
 
-Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.
+[AQUI ENTRA UM VÍDEO]
+
+<h2> Novidades no Glass</h2> 
+<p> Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
+
+<p> Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
 Copyright 2013 - by Gustavo Guanabara
 Facebook | Twitter
+    </div>
 </body>
 </html>
