--- a/index.html
+++ b/index.html
@@ -4,19 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre google Glass</title>
-    <style>
-        body{
-            background-color:rgba(237, 238, 190, 0.295);
-            color: rgba(0, 0, 0,);
-        }
-        p {
-            text-align: justify;
-            text-indent: 50px;
-        }
-        h2 {
-            text-align: center;
-        }     
-     </style>
+
+    <link rel="stylesheet" type="text/css"     href="_css/style.css">
     
 </head>
 <body>
@@ -50,7 +39,13 @@ Menu Principal
 <h2 > que é</h2>
 <p> O<b> Google Glass </b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass </em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-[AQUI ENTRA UMA FOTO]
+<figure class="foto-legenda">
+    <img src="projeto-glass-html5/_imagens/glass-quadro-homem-mulher.jpg">
+    <figcaption>
+        <h4>Google Glass</h4>
+        <p>Uma nova maneira de ver o mundo</p>
+    </figcaption>
+</figure>
 
 <h2> Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
