--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </ul>
     </nav>  
         </header>
+    <section id="corpo">
         <hgroup>
     
             <h3 >Tecnologia> Inovações</h3>
@@ -54,12 +55,17 @@
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
 <h2>Especificações Técnicas</h2>
-Tabela Técnica do Google Glass Mar/2013
+<table id="tabelainfo">
 
-Tela:Resolução equivalente a tela de 25"
-Camera: 5MP para fotos / 720p para vídeos
-Conectividade: Wi-Fi/ Bluetooth
-Memória Interna: 12GB
+<caption> Tabela Técnica do Google Glass Mar/2013</caption>
+
+<tr><td> Tela</td><td> Resolução equivalente a tela de 25"</td></tr>
+<tr><td rowspan="2"> Camera</td><td> 5MP para fotos </td></tr>
+<tr><td> 720p para vídeos</td></tr>
+<tr><td rowspan="2"> Conectividade</td><td>Wifi</td></tr>
+<tr><td> Bluetooth </td></tr>
+<tr><td> Memória Interna</td><td> 12GB</td></tr>
+</table>
 
 <h2>Como funciona</h2>
 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
@@ -68,6 +74,8 @@ Memória Interna: 12GB
 <p> vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
+    </section>
+    <aside id="lateral">
 
 <h1>Outras Notícias</h1>
 <h3>Vídeo mais recente</h3>
@@ -78,9 +86,12 @@ Memória Interna: 12GB
 <p> Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p> Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
+</aside>
+<footer id="rodape">
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+<p> Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+<a href="http://facebook.com/cursosemvideo" target="blank"> Facebook </a>| <a href="http://twitter.com/cursosemvideo" target="blank"> Twitter</a></p>
+</footer>
     </div>
 </body>
 </html>
