--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
     </nav>  
         </header>
     <section id="corpo">
+        <article id="noticia-principal">
+            <header id="cabeçalho-artigo">
         <hgroup>
     
             <h3 >Tecnologia> Inovações</h3>
-            <h1> tudo sobre o Google Glass</h1>
-            <h2>Gustavo Guanabara</h2>
-            <h3 >em 23/Abril/2013,</h3>
+            <h1> Tudo sobre o Google Glass</h1>
+            <h2>por Gustavo Guanabara</h2>
+            <h3 class="direita">em 23/Abril/2013,</h3>
         </hgroup>
+             </header>
 
-<h2 > que é</h2>
+<h2 > O que é</h2>
 <p> O<b> Google Glass </b> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google com" target="_blank"> Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass </em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
 <figure class="foto-legenda">
@@ -57,28 +60,30 @@
 <h2>Especificações Técnicas</h2>
 <table id="tabelainfo">
 
-<caption> Tabela Técnica do Google Glass Mar/2013</caption>
+<caption> Tabela Técnica do Google Glass<span> Mar/2013</span></caption>
 
-<tr><td> Tela</td><td> Resolução equivalente a tela de 25"</td></tr>
-<tr><td rowspan="2"> Camera</td><td> 5MP para fotos </td></tr>
-<tr><td> 720p para vídeos</td></tr>
-<tr><td rowspan="2"> Conectividade</td><td>Wifi</td></tr>
-<tr><td> Bluetooth </td></tr>
-<tr><td> Memória Interna</td><td> 12GB</td></tr>
+<tr><td class="ce"> Tela</td><td class="cd"> Resolução equivalente a tela de 25"</td></tr>
+<tr><td rowspan="2" class="ce"> Camera </td><td class="cd"> 5MP para fotos </td></tr>
+<tr><td class="cd"> 720p para vídeos</td></tr>
+<tr><td rowspan="2" class="ce"> Conectividade</td><td class="cd">Wifi</td></tr>
+<tr><td class="cd" > Bluetooth </td></tr>
+<tr><td class="ce"> Memória Interna</td><td class="cd"> 12GB</td></tr>
 </table>
 
 <h2>Como funciona</h2>
 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
 
-<h2> O que você pode fazer com o Google Glasses</h2>
+<h2> O que você pode fazer com o Google Glass</h2>
 <p> vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
 [AQUI ENTRA UM VÍDEO]
+</article>
     </section>
-    <aside id="lateral">
 
+    <aside id="lateral">
+<article id="noticia-secundaria">
 <h1>Outras Notícias</h1>
-<h3>Vídeo mais recente</h3>
+<h2>Vídeo mais recente</h2>
 
 [AQUI ENTRA UM VÍDEO]
 
@@ -86,6 +91,7 @@
 <p> Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p> Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
+</article>
 </aside>
 <footer id="rodape">
 
