--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" type="text/css"     href="_css/style.css">
     
 </head>
-<script>
-    function mudaFoto (foto){
-        document.getElementById("icone").src = foto;
-    }
-</script>
+<script src="projeto-glass-html5\_javascript\funcoes.js"></script>
 <body>
     <div id="interface">
         <header id="cabecalho">
