links do menu organizado com cabeçario e rodapé

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo sobre google Glass</title>
 
-    <link rel="stylesheet" type="text/css"     href="_css/style.css">
+    <link rel="stylesheet" type="text/css"     href="projeto-glass-html5/_css/style.css">
     
 </head>
 <script src="projeto-glass-html5\_javascript\funcoes.js"></script>
