--- a/projeto-glass-html5/_textos/specs-txt.html
+++ b/projeto-glass-html5/_textos/specs-txt.html
@@ -1,14 +1,48 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tudo sobre google Glass</title>
 
-[AQUI ENTRA UMA FOTO]
+    <link rel="stylesheet" type="text/css"     href="_css/style.css">
+    
+</head>
+<script src="projeto-glass-html5\_javascript\funcoes.js"></script>
+<body>
+    <div id="interface">
+        <header id="cabecalho">
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+        <hgroup>
+            <h1>Google Glass</h1>
+            <h2>A revolução do Google está chegando</h2>
+        </hgroup>
+
+
+
+    <img id="icone" src="E:\projetos DEV\site--glass\projeto-glass-html5\_imagens\glass-oculos-preto-med.png">
+   <nav id="menu">
+     <h1> Menu Principal</h1>
+         <ul>
+            <li onmousemove="mudaFoto('projeto-glass-html5/_imagens/home.png')"onmouseout="mudaFoto('E:/projetos DEV/site--glass/projeto-glass-html5/_imagens/glass-oculos-preto-med.png')"><a href="index.html"> Home</a> </li>
+            <li onmousemove="mudaFoto('projeto-glass-html5/_imagens/especificacoes.png')"onmouseout="mudaFoto('E:/projetos DEV/site--glass/projeto-glass-html5/_imagens/glass-oculos-preto-med.png')"><a href="projeto-glass-html5/_textos/specs-txt.html">Especificações</a> </li>
+            <li onmousemove="mudaFoto('projeto-glass-html5/_imagens/fotos.png')"onmouseout="mudaFoto('E:/projetos DEV/site--glass/projeto-glass-html5/_imagens/glass-oculos-preto-med.png')"><a href="projeto-glass-html5/_textos/fotos-txt.html">Fotos</a> </li>
+            <li onmousemove="mudaFoto('projeto-glass-html5/_imagens/multimidia.png')"onmouseout="mudaFoto('E:/projetos DEV/site--glass/projeto-glass-html5/_imagens/glass-oculos-preto-med.png')"><a href="projeto-glass-html5/_textos/multimidia-txt.html"> Multimídia</a></li>
+            <li onmousemove="mudaFoto('projeto-glass-html5/_imagens/contato.png')"onmouseout="mudaFoto('E:/projetos DEV/site--glass/projeto-glass-html5/_imagens/glass-oculos-preto-med.png')"><a href="projeto-glass-html5/_textos/fale-conosco-txt.html">Fale conosco</a> </li>
+        </ul>
+    </nav>  
+        </header>
+    <section id="corpo">
+        <article id="noticia-principal">
+            <header id="cabeçalho-artigo">
+        <hgroup>
+    
+            <h3 >Tecnologia> Inovações</h3>
+            <h1> Tudo sobre o Google Glass</h1>
+            <h2>por Gustavo Guanabara</h2>
+            <h3 class="direita">em 23/Abril/2013,</h3>
+        </hgroup>
+             </header>
 
 Glass > Especificações
 Raio-X no Google Glass
@@ -18,6 +52,11 @@ Atualizado em 01/Maio/2013
 Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
 
 [AQUI ENTRA UMA IMAGEM]
+<footer id="rodape">
 
-Copyright 2013 - by Gustavo Guanabara<
-Facebook | Twitter
+    <p> Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+    <a href="http://facebook.com/cursosemvideo" target="blank"> Facebook </a>| <a href="http://twitter.com/cursosemvideo" target="blank"> Twitter</a></p>
+    </footer>
+        </div>
+    </body>
+    </html>
