--- a/specs.html
+++ b/specs.html
@@ -6,7 +6,10 @@
     <title>Tudo sobre google Glass</title>
 
     <link rel="stylesheet" type="text/css"     href="projeto-glass-html5/_css/style.css">
-    
+
+    <link rel="stylesheet" type="text/css"     href="projeto-glass-html5/_css/specs.css">
+
+   
 </head>
 <script src="projeto-glass-html5\_javascript\funcoes.js"></script>
 <body>
@@ -33,14 +36,27 @@
     </nav>  
         </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="corpo-full">
+    <article id="noticia-principal">
+        <header id="cabeçalho-artigo">
+    <hgroup>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+        <h3 >Glass > Especificações</h3>
+        <h1> Raio-X no Google Glass</h1>
+        <h2>por Gustavo Guanabara</h2>
+        <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+    </hgroup>
+         </header>
 
-[AQUI ENTRA UMA IMAGEM]
+     <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+        <section id="conteudo">
+
+            <img src="projeto-glass-html5/_imagens/glass-esquema-marcado.jpg" id="ocul">
+            <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
+        </p> 
+        </section>
+    </article>
+</section>
 
 <footer id="rodape">
 
