--- a/fotos.html
+++ b/fotos.html
@@ -6,7 +6,7 @@
     <title>Tudo sobre google Glass</title>
 
     <link rel="stylesheet" type="text/css"     href="projeto-glass-html5/_css/style.css">
-    
+    <link rel="stylesheet" type="text/css" href="projeto-glass-html5/_css/fotos.css">
 </head>
 <script src="projeto-glass-html5\_javascript\funcoes.js"></script>
 <body>
@@ -34,19 +34,18 @@
         </header>
    
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+<p> Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.</p>
+<ul id="album-fotos">
+    <li id="foto01"><span>Agenda e lembretes </span></li>
+    <li id="foto02"><span>Sergey Brin usando o Glass </span></li>
+    <li id="foto03"><span>Leve e compacto </span></li>
+    <li id="foto04"><span>Sensação de uma tela de 50" </span></li>
+    <li id="foto05"><span>Vários tipos de lente </span></li>
+    <li id="foto06"><span>Informações importantes </span></li>
+</ul>
+
 
 <footer id="rodape">
 
