--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -32,38 +32,52 @@
         </ul>
     </nav>  
         </header>
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
-
+        <article id="noticia-principal">
+            <header id="cabeçalho-artigo">
+                <h3 >Fale Conosco > Contato</h3>
+                <h1> Formulário de Contato</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+            </header>
+        </article>
+<form>
+    <fieldset>
 Identificação do Usuário
     Nome:
     Senha:
     E-mail:
-    Sexo:
+   <fieldset>   Sexo:
         - Masculino
         - Feminino
+    </fieldset>
     Data de Nascimento:
+</fieldset>
 
+<fieldset>
 Endereço do Usuário
     Logradouro:
     Número:
     Estado:
     Cidade:
+</fieldset>
 
+<fieldset>
 Mensagem do Usuário
     Grau de Urgência:
     Mensagem:
+</fieldset>
 
+<fieldset>
 Quero um Google Glass
     Gostaria de adquirir um Google Glass quando disponível
     Cor:
     Quantidade:
     Preço Total: R$
+</fieldset>
 
 
 [BOTÃO ENVIAR]
+</form>
 
 <footer id="rodape">
 
