--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -41,38 +41,41 @@
             </header>
         </article>
 <form>
-    <fieldset>
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-   <fieldset>   Sexo:
-        - Masculino
-        - Feminino
-    </fieldset>
-    Data de Nascimento:
+    <fieldset id="identificação">
+<legend> Identificação do Usuário</legend>
+    <p> Nome:<input type="text" name="anome" id="bnome"size="20"maxlength="30" placeholder="Nome completo"> </p>
+    <p>Senha:<input type="password" name="asenha" id="bsenha" size="8" maxlength="8" placeholder="8 dígitos">
+    <p> E-mail:<input type="email" name="aimail" id="bimail" placeholder="@gmail.com"></p>
+   <fieldset id="sexo">  
+    <legend>Sexo:</legend>
+       <input type="radio" name="asex" id="bmasc">  <label for="bmasc"> Masculino</label><br>
+       <input type="radio" name="asex" id="bfem"> <label for="bfem">Feminino</label>
+    </fieldset >
+    <p> Data de Nascimento:<input type="date" name="adata" id="bdata"></p>
 </fieldset>
 
-<fieldset>
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+<fieldset id="endereço">
+    <legend> Endereço do Usuário</legend>
+        <p>Logradouro:<input type="text" name="alogra" id="blogra" placeholder="Rua,Beco,Numero,Bairro" ></p>
+        <p>Número: <input type="number" name="
+            anumero" id="bnumero"></p>
+        <p> Estado:<input type="text" name="aestado" id="bestado"></p>
+        <p>Cidade:<input type="text" name="acidade" id="bcidade"> </p>
+    
 </fieldset>
 
-<fieldset>
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+<fieldset id="msg">
+    <legend> Mensagem do Usuário</legend>
+        <p> Grau de Urgência:</p>
+        <p> Mensagem:</p>
 </fieldset>
 
-<fieldset>
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+<fieldset id="quantidade">
+    <legend>Quero um Google Glass Gostaria de adquirir um Google Glass quando disponível</legend>
+    
+        <p> Cor:</p>
+        <p> Quantidade:</p>
+        <p> Preço Total: R$</p>
 </fieldset>
 
 
