--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     
             <h3 >Tecnologia> Inovações</h3>
             <h1> Tudo sobre o Google Glass</h1>
-            <h2>por Gustavo Guanabara</h2>
+            <h2>Prof. Gustavo Guanabara</h2>
+            <h2>Aluno = wesley</h2>
             <h3 class="direita">em 23/Abril/2013,</h3>
         </hgroup>
              </header>
