--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
 
 <h2> O que você pode fazer com o Google Glass</h2>
 <p> vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
-
-[AQUI ENTRA UM VÍDEO]
+    <div>
+        <video id="film1" controls="controls">
+            <source src="_media\how-it-feels.mp4" type="video/mp4">
+        </video>
+    </div>
 </article>
     </section>
 
@@ -86,8 +89,11 @@
 <article id="noticia-secundaria">
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
-
-[AQUI ENTRA UM VÍDEO]
+    <div class="divideodois">
+        <video id="film2"controls="controls">
+            <source src="_media\one-day.mp4" type="video/mp4">
+        </video>
+    </div>
 
 <h2> Novidades no Glass</h2> 
 <p> Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
